修复/finder查找附魔书时“附魔书”文本出现两次